@@ -49,6 +49,11 @@
     Type: feature
     Changed: wc/proxy/{Headers,HttpServer,SslServer}.py
 
+  * Restrict the number of attributes in HTML start tags to fix some security
+    issues with IE.
+    Type: feature
+    Changed: wc/filter/html/HtmlSecurity.py
+
 2.37.1 "True Romance" (released 17.2.2006, windows-only fixes)
 
   * Quote command line arguments when installing under Windows.
